lnd-plugin: Add AddSusPeer to the grpc server
With this command we can manually add suspicious peers to the
policy file.
