# peerswaprpc/peerswaprpc.swagger.json
@@ -185,6 +185,12 @@
           "items": {
             "type": "string"
           }
+        },
+        "suspiciousPeerList": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
         }
       }
     },
@@ -315,14 +321,11 @@
     "protobufAny": {
       "type": "object",
       "properties": {
-        "typeUrl": {
+        "@type": {
           "type": "string"
-        },
-        "value": {
-          "type": "string",
-          "format": "byte"
         }
-      }
+      },
+      "additionalProperties": {}
     },
     "rpcStatus": {
       "type": "object",
